--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -5,13 +5,13 @@
 
   @include vp-1366 {
     flex-direction: column;
-    align-items: center;
-    padding: 100px 0 183px 0;
+    padding: 100px 45px 183px 45px;
     gap: 0;
+    align-items: center;
   }
 
   @include vp-768 {
-    padding: 70px 26px 70px 15px;
+    padding: 70px 0;
   }
 }
 
@@ -24,8 +24,8 @@
   }
 
   @include vp-768 {
-    width: 280px;
     text-align: start;
+    width: 289px;
   }
 
   h2 {
@@ -48,6 +48,7 @@
       font-size: 32px;
       line-height: 32px;
       letter-spacing: 0.96px;
+      margin: 0 0 13px 0;
     }
   }
 
@@ -89,6 +90,7 @@
       text-align: start;
       font-size: 14px;
       line-height: 22px;
+      margin: 0 0 50px 0;
     }
   }
 
@@ -104,11 +106,15 @@
 }
 
 .about__image-wrapper {
-  @include vp-1366 {
-  }
+ 
 
   @include vp-768 {
     margin: 0 0 40px 0;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -118,12 +124,13 @@
   right: 54%;
   width: 364px;
   height: 228px;
+  
 
   @include vp-1366 {
     width: 265px;
     height: 167px;
-    top: 74%;
-    right: 33%;
+    top: 76%;
+    right: 31%;
   }
 
   @include vp-768 {
