--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -16,6 +16,13 @@
       line-height: 42px;
       letter-spacing: 1.26px;
     }
+
+    @include vp-768 {
+      font-size: 32px;
+      line-height: 32px;
+      letter-spacing: 0.96px;
+      margin: 0 0 55px 0;
+    }
   }
 }
 .advantages__container {
@@ -47,6 +54,7 @@
     @include vp-768 {
       display: flex;
       flex-direction: column;
+      gap: 35px;
     }
   }
 
@@ -75,6 +83,7 @@
     @include vp-768 {
       padding: 0;
       width: 100%;
+      margin: 0;
     }
   }
 }
@@ -105,6 +114,7 @@
     @include vp-768 {
       font-size: 64px;
       line-height: 64px;
+      margin: 0;
     }
   }
 
@@ -114,6 +124,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 22px;
+
+    @include vp-768 {
+      margin: 0 0 12px 0;
+    }
   }
 }
 
@@ -152,6 +166,14 @@
       line-height: 22px;
     }
   }
+  
+  br {
+    display: none;
+
+    @include vp-768 {
+      display: block;
+    }
+  }
 }
 
 .advantages__centered-item {
@@ -167,7 +189,7 @@
 
   @include vp-1366 {
     width: 100%;
-    padding: 35px 0;
+    padding: 30px 0 40px 0;
   }
 
   span {
@@ -186,8 +208,15 @@
     @include vp-768 {
       font-size: 64px;
       line-height: 64px;
+      margin: 0 0 5px 0;
     }
   }
+
+  // ul {
+  //   @include vp-768 {
+  //     padding: 30px 0 40px 0;
+  //   }
+  // }
 
   span + span {
     color: $color-default-white;
@@ -208,6 +237,7 @@
       font-size: 22px;
       font-weight: 700;
       line-height: 22px;
+      margin: 0 0 20px 0;
     }
   }
 
