заканчиваем ПП для мобилки 90%

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -14,6 +14,7 @@
     letter-spacing: 1.26px;
     font-size: 42px;
     letter-spacing: 1.26px;
+    margin: 0 0 36px 0;
   }
 }
 
@@ -28,6 +29,7 @@
 
   @include vp-1366 {
     grid-column-gap: 140px;
+    row-gap: 27px;
   }
 
   @include vp-768 {
@@ -37,8 +39,6 @@
   }
 }
 
-.contacts__item {
-}
 .contacts__title {
   font-size: 24px;
   font-style: normal;
@@ -49,8 +49,7 @@
   @include vp-1366 {
     font-size: 22px;
     line-height: 22px;
-    margin: 0 0 8px;
-    
+    margin: 0 0 11px;
   }
 }
 .contacts__description {
@@ -59,12 +58,4 @@
   font-weight: 400;
   line-height: 22px;
   margin: 0;
-
-  @include vp-1366 {
-    margin: 0 0 30px 0;
-  }
-
-  @include vp-768 {
-    margin: 0;
-  }
 }
