--- a/source/sass/blocks/reviews-swiper.scss
+++ b/source/sass/blocks/reviews-swiper.scss
@@ -17,6 +17,13 @@
       margin: 0 0 42px 0;
       padding: 100px 0 0 0;
     }
+
+    @include vp-768 {
+      font-size: 32px;
+      line-height: 32px;
+      letter-spacing: 0.96px;
+      padding: 70px 0 0 0;
+    }
   }
 
   @include vp-1366 {
@@ -65,6 +72,11 @@
     width: 226px;
     min-height: 328px;
   }
+
+  img {
+    width: 68px;
+    height: 68px;
+  }
 }
 
 .reviews-text-wrapper {
@@ -112,7 +124,6 @@
 
 .reviews-button-next {
   top: 26%;
-  
 
   @include vp-1366 {
     top: 37%;
@@ -127,7 +138,7 @@
 .reviews-button-prev {
   top: 27%;
   left: -77px;
-  
+
   @include vp-1366 {
     top: 39%;
     left: -70px;
