ПП по мобильной 99 %

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -36,11 +36,14 @@
 
   @include vp-1366 {
     gap: 27px 141px;
-    height: 150px;
+    height: 137px;
   }
 
   @include vp-768 {
-    gap: 28px;
+    flex-direction: column;
+    gap: 25px;
+    min-height: 292px;
+    flex-wrap: nowrap;
   }
 }
 
@@ -55,6 +58,12 @@
     font-size: 22px;
     line-height: 22px;
     margin: 0 0 11px;
+  }
+
+  @include vp-768 {
+    font-size: 20px;
+    line-height: 20px;
+    margin: 0 0 12px;
   }
 }
 .contacts__description {
