--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -12,6 +12,12 @@
 
   @include vp-768 {
     margin: 0 0 30px 0;
+    height: 15px;
+  }
+  
+  img {
+    width: 100px;
+    height: 15px;
   }
 }
 
@@ -30,7 +36,7 @@
   }
 
   @include vp-768 {
-    gap: 20px 35px;
+    gap: 16px 35px;
     margin: 0 0 55px 0;
   }
   
@@ -61,4 +67,8 @@
   gap: 10px;
   margin: 0;
   padding: 0;
+
+  @include vp-768 {
+    align-self: center;
+  }
 }
