--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -14,10 +14,12 @@
     margin: 0 0 30px 0;
     height: 15px;
   }
-  
+
   img {
-    width: 100px;
-    height: 15px;
+    @include vp-768 {
+      width: 90px;
+      height: 15px;
+    }
   }
 }
 
@@ -39,9 +41,7 @@
     gap: 16px 35px;
     margin: 0 0 55px 0;
   }
-  
 }
-
 
 .nav__user-link {
   color: $color-default-white;
