--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -8,8 +8,9 @@
     font-weight: 600;
     line-height: 54px;
     letter-spacing: 1.62px;
-    margin: 0 0 50px 0;
-    padding: 120px 0 0 103px;
+    margin: 0 auto 50px auto;
+    padding: 120px 0 0 0;
+    max-width: 1160px;
 
     @include vp-1366 {
       font-size: 42px;
@@ -24,14 +25,15 @@
       font-size: 32px;
       line-height: 32px;
       letter-spacing: 0.96px;
-      margin: 0 0 37px 0;
+      margin: 0 auto 37px auto;
     }
   }
 }
 .faq__container {
-  padding: 0 103px 120px 103px;
+  padding: 0 0 120px 0;
   display: flex;
   gap: 40px;
+  max-width: 1160px;
 
   @include vp-1366 {
     padding: 0 45px 100px 45px;
@@ -52,12 +54,14 @@
   @include vp-1366 {
     flex-direction: row;
     gap: 10px;
+    justify-content: center;
   }
 
   @include vp-768 {
     flex-wrap: wrap;
     gap: 8px;
     margin: 0 0 52px 0;
+    justify-content: flex-start;
   }
 }
 
@@ -154,13 +158,13 @@
   }
 
   li {
-    flex-grow: 1;
     display: flex;
-    align-items: center;
     flex-wrap: wrap;
     position: relative;
     cursor: pointer;
     width: 100%;
+    justify-content: space-between;
+    align-items: stretch;
 
     &:first-child {
       @include vp-768 {
@@ -176,57 +180,55 @@
       background: rgba(28, 51, 116, 0.2);
       bottom: -22px;
     }
-  }
 
-  
-
-  h5 {
-    margin: 0 auto 0 0;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-
-    @include vp-1366 {
-      max-width: 560px;
-      font-size: 22px;
-      line-height: 22px;
-    }
-
-    @include vp-768 {
-      font-size: 20px;
-      line-height: 20px;
-      width: 238px;
-      margin: 0 auto 0 0;
-    }
-  }
-
-  p {
-    margin: 5px 0 0 0;
-    color: #102654;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 24px;
-    width: 660px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s ease;
-
-    @include vp-1366 {
-      max-width: 550px;
-    }
-
-    @include vp-768 {
-      width: 279px;
-      font-size: 16px;
-      line-height: 20px;
+    h5 {
       margin: 0;
-    }
-  }
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 24px;
+      width: 80%;
 
-  p[data-target="is-opened"] {
-    display: block;
+      @include vp-1366 {
+        font-size: 22px;
+        line-height: 22px;
+      }
+
+      @include vp-768 {
+        font-size: 20px;
+        line-height: 20px;
+        margin: 0;
+      }
+    }
+
+    p {
+      margin: 5px 0 0 0;
+      color: #102654;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 300;
+      line-height: 24px;
+      width: 660px;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.5s ease;
+
+      @include vp-1366 {
+        max-width: 550px;
+      }
+
+      @include vp-768 {
+        max-width: 279px;
+        width: 100%;
+        font-size: 16px;
+        line-height: 20px;
+        margin: 0;
+      }
+    }
+
+    p[data-target="is-opened"] {
+      display: block;
+    }
   }
 }
 
@@ -243,6 +245,7 @@
   font-size: 0;
   position: relative;
   z-index: 0;
+  margin: 0 0 0 auto;
 
   @include vp-768 {
     width: 30px;
@@ -319,6 +322,9 @@
 .faq__line-breaker-1 {
   display: none;
 
+  @include vp-1366 {
+    display: none;
+  }
   @include vp-768 {
     display: block;
   }
