--- a/source/sass/blocks/jury-swiper.scss
+++ b/source/sass/blocks/jury-swiper.scss
@@ -11,10 +11,9 @@
 }
 
 .jury-container {
-  max-width: 1160px;
   position: relative;
   padding: 0 0 120px 0;
-  margin: 0;
+  max-width: 1160px;
 
   @include vp-1366 {
     padding: 0 0 100px 0;
@@ -32,21 +31,22 @@
   font-weight: 600;
   line-height: 54px;
   letter-spacing: 1.62px;
-  margin: 0 0 45px 0;
+  margin: 0 auto 45px auto;
+  max-width: 1160px;
 
   @include vp-1366 {
     text-align: center;
     font-size: 42px;
     line-height: 42px;
     letter-spacing: 1.26px;
-    margin: 0 0 38px 0;
+    margin: 0 auto 38px auto;
   }
 
   @include vp-768 {
     font-size: 32px;
     line-height: 32px;
     letter-spacing: 0.96px;
-    margin: 0 0 42px 0;
+    margin: 0 auto 42px auto;
   }
 }
 
@@ -77,14 +77,12 @@
 .jury-slide {
   position: relative;
   width: 260px;
+  height: 294px;
 
   img {
+    object-fit: cover;
     width: 100%;
-  }
-
-  @include vp-1366 {
-    width: 268px;
-    height: 294px;
+    height: 100%;
   }
 
   @include vp-768 {
