правки по макету (видео и падинги)

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -22,12 +22,14 @@
   @include vp-1366 {
     text-align: center;
     width: 505px;
+    margin: 0 auto;
   }
 
   @include vp-768 {
     text-align: start;
     width: 294px;
     padding: 0 0 0 15px;
+    margin: 0;
   }
 
   h2 {
