--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -61,10 +61,9 @@
   padding: 40px 45px 45px 45px;
   display: flex;
   flex-direction: column;
-  flex: 1;
 
   @include vp-1366 {
-    min-width: 279px;
+    max-width: 279px;
     width: 44%;
   }
 
